add google fonts

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Roboto:wght@300;400;900&display=swap"
+		rel="stylesheet">
+
 	<link rel="stylesheet" href="./styles/vendors/bootstrap-reboot.css">
 	<link rel="stylesheet" href="./styles/style.css">
 	<link rel="stylesheet" href="https://use.typekit.net/wpn4iwl.css">
@@ -22,6 +27,16 @@
 					<a href="#">
 						<li class="menu-item">
 							ホーム
+						</li><!-- /.menu-item -->
+					</a>
+					<a href="#">
+						<li class="menu-item">
+							サービス
+						</li><!-- /.menu-item -->
+					</a>
+					<a href="#">
+						<li class="menu-item">
+							料金
 						</li><!-- /.menu-item -->
 					</a>
 					<a href="#">
