--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Roboto:wght@300;400;900&display=swap"
@@ -12,12 +13,11 @@
 
 	<link rel="stylesheet" href="./styles/vendors/bootstrap-reboot.css">
 	<link rel="stylesheet" href="./styles/style.css">
-	<link rel="stylesheet" href="https://use.typekit.net/wpn4iwl.css">
 	<title>WEBSON | 大阪のウェブ制作フリーランス</title>
 </head>
 
 <body>
-	<header>
+	<header class="header">
 		<section class="nav">
 			<div class="header-logo">
 				<img src="./images/WEBSON.png" alt="">
@@ -56,6 +56,7 @@
 					</a>
 					<a href="#">
 						<li class="menu-item">
+
 							お問い合わせ
 						</li><!-- /.menu-item -->
 					</a>
@@ -79,22 +80,39 @@
 
 		<section class="services">
 
-			<h2 class="title services__title">
-				サービス内容
-			</h2>
-			<p class="description">
-				なんのためにウェブサイトをつくるのでしょうか。作りたいと思う人それぞれに、目的があるはずです。目的に応じた、ホームページ制作、運用、施策を提案します。
-			</p><!-- /.description -->
-			<p class="description">
-				WEBSONでは、効率的、効果的に会議を進める技術であるホワイトボード・ミーティング®認定講師資格を持ったそんほんすが、お客様の状況をしっかりと効率よくききとります。（ホワイトボードがなくても大丈夫）
-			</p><!-- /.description -->
-			<p class="description">
-				Webのことがあんまりわからなくても大丈夫です。小学校教員経験から、わからないことを捉え、わかりやすく説明いたします。
-			</p><!-- /.description -->
+			<div class="text-wrapper">
+				<h2 class="title services__title">
+					サービス内容
+				</h2>
+				<div class="bl_descripton">
+					<p class="description">
+						なんのためにウェブサイトをつくるのでしょうか。作りたいと思う人それぞれに、目的があるはずです。目的に応じた、ホームページ制作、運用、施策を提案します。
+					</p><!-- /.description -->
+					<p class="description">
+						WEBSONでは、効率的、効果的に会議を進める技術であるホワイトボード・ミーティング®認定講師資格を持ったそんほんすが、お客様の状況をしっかりと効率よくききとります。（ホワイトボードがなくても大丈夫）
+					</p><!-- /.description -->
+					<p class="description">
+						Web技術に明るくなくても大丈夫です。教員経験のあるそんほんすは、あなたの意識にあるキーワードから、適切に課題を導き出し、対応策をわかりやすくご説明いたします。
+					</p><!-- /.description -->
+				</div><!-- /.bl-descripton -->
+			</div><!-- /.text-wrapper -->
+
+			<div class="ly_card_wrapper">
+				<div class="card">
+					<figure class="card_image">
+						<img src="./images/computer.png" alt="">
+					</figure><!-- /.card_image -->
+					<h3>ホームページ制作、運用、リニューアル</h3>
+				</div>
+				<div class="card">
+					<figure class="card_image">
+						<img src="./images/seo.png" alt="">
+					</figure><!-- /.card_image -->
+					<h3>SEO対策、SNS運用代行、コンサルティング</h3>
+				</div>
+			</div><!-- /.ly_card_wrapper -->
 
 
-			<h3>ホームページ制作、運用、リニューアル</h3>
-			<h3>SEO対策、SNS運用代行、コンサルティング</h3>
 
 		</section><!-- /.services -->
 
@@ -146,7 +164,7 @@
 		<section class="about">
 			<h2 class="title about__title">私について</h2>
 			<p class="description">
-				２０１９年春頃から本格的にプログラミングやウェブ制作の学習にとりくみはじめました。かなり畑違いのところへのチャレンジですが、ウェブ制作事業をやりたいという思いを捨てきれず、現在副業でウェブ制作・開発にとりくんでいます。
+				２０１９年春頃から本格的にプログラミングやウェブ制作の学習にとりくみはじめました。教員経験を通して培ってきたコミュニケーション力や課題解決力をウェブ制作事業によって社会に還元したいという思いが募り、現在副業でウェブ制作・開発にとりくんでいます。
 			</p><!-- /.description -->
 			<a href="#">もっと読む >>></a>
 
@@ -171,29 +189,7 @@
 	</footer>　
 
 
-	ウェブサイト制作・開発
-	WEBSON
 
-	サービス
-
-	ホームページ制作、運用、リニューアル
-	SEO対策、SNS運用代行、コンサルティング
-	技術
-	HTML
-	CSS
-	JavaScript
-	WordPress
-	GatsbyJS（React）
-	実績
-	現在教育系教材紹介サイトのコーディング、WordPress化進行中
-	学習リンク集１
-	学習リンク集２
-	ポートフォリオサイト最初のバージョン
-	八尾市教職員組合　新規採用者向け特設LP
-	TECHMEETS
-	デザインカンプからコーディング
-	代表　そんほんすについて
-	お問い合わせ
 
 
 
