PRECSS heroブロックまで

--- a/index.html
+++ b/index.html
@@ -13,75 +13,79 @@
 
 	<link rel="stylesheet" href="./styles/vendors/bootstrap-reboot.css">
 	<link rel="stylesheet" href="./styles/style.css">
-	<title>WEBSON | 大阪のウェブ制作フリーランス</title>
+	<heading>WEBSON | 大阪のウェブ制作フリーランス</heading>
 </head>
 
 <body>
-	<header class="header">
-		<section class="nav">
-			<div class="header-logo">
-				<img src="./images/WEBSON.png" alt="">
+	<header class="ly_header">
+		<section class="bl_nav">
+			<div class="el_headerLogo hl_shadow">
+				<figure class="el_headerLogo_imgWrapper">
+					<img src="./images/WEBSON.png" alt="">
+				</figure><!-- /.el_headerLo -->
 			</div><!-- /.header-logo -->
-			<nav class="header-nav">
-				<ul class="menu-list">
+			<nav class="bl_headerNav">
+				<ul class="bl_menuList">
 					<a href="#">
-						<li class="menu-item">
+						<li class="el_menuItem">
 							ホーム
-						</li><!-- /.menu-item -->
+						</li><!-- /.el_menuItem -->
 					</a>
 					<a href="#">
-						<li class="menu-item">
+						<li class="el_menuItem">
 							サービス
-						</li><!-- /.menu-item -->
+						</li><!-- /.el_menuItem -->
 					</a>
 					<a href="#">
-						<li class="menu-item">
+						<li class="el_menuItem">
 							料金
-						</li><!-- /.menu-item -->
+						</li><!-- /.el_menuItem -->
 					</a>
 					<a href="#">
-						<li class="menu-item">
+						<li class="el_menuItem">
 							スキル
-						</li><!-- /.menu-item -->
+						</li><!-- /.el_menuItem -->
 					</a>
 					<a href="#">
-						<li class="menu-item">
+						<li class="el_menuItem">
 							実績
-						</li><!-- /.menu-item -->
+						</li><!-- /.el_menuItem -->
 					</a>
 					<a href="#">
-						<li class="menu-item">
+						<li class="el_menuItem">
 							WEBSONについて
-						</li><!-- /.menu-item -->
+						</li><!-- /.el_menuItem -->
 					</a>
 					<a href="#">
-						<li class="menu-item">
+						<li class="el_menuItem">
 
 							お問い合わせ
-						</li><!-- /.menu-item -->
+						</li><!-- /.el_menuItem -->
 					</a>
 				</ul><!-- /.menu-list -->
 			</nav><!-- /.menu -->
 		</section><!-- /.nav -->
 	</header>
 	<main>
-		<section class="hero-header">
-			<div class="hero-header__text">
-				<p class="hero-header__sub-heading">ウェブサイト制作・開発</p>
-				<h1 class="hero-header__heading">WEBSON</h1>
-				<p class="hero-header__description">
+		<section class="bl_hero">
+			<div class="bl_hero_heading_wrapper">
+				<p class="bl_hero_subHeading">ウェブサイト制作・開発</p>
+				<h1 class="bl_hero_heading">WEBSON</h1>
+				<p class="bl_hero_description">
 					ていねいなコミュニケーションをとり、依頼者の状況、要望を的確にとらえ、<br>
 					最適なウェブサイト、施策を提案・構築します。
 				</p>
-			</div><!-- /.hero-header__text -->
-			<img class="arrow" src="./images/arrow.png" alt="">
+			</div><!-- /.hero__text -->
+			<figure class="el_arrow_wrapper">
+				<img class="el_arrow" src="./images/arrow.png" alt="">
+			</figure><!-- /.el_arrow_wrapper -->
 
-		</section><!-- /.hero-header -->
+		</section><!-- /.hero -->
 
-		<section class="services">
+		<section class="bl_services">
 
-			<div class="text-wrapper">
-				<h2 class="title services__title">
+			<div class="bl_text-wrapper">
+				<h2 class="el_heading el_services__heading">
 					サービス内容
 				</h2>
 				<div class="bl_descripton">
@@ -97,7 +101,7 @@
 				</div><!-- /.bl-descripton -->
 			</div><!-- /.text-wrapper -->
 
-			<div class="ly_card_wrapper">
+			<div class="bl_card_wrapper">
 				<div class="card">
 					<figure class="card_image">
 						<img src="./images/computer.png" alt="">
@@ -117,7 +121,7 @@
 		</section><!-- /.services -->
 
 		<section class="price">
-			<h2 class="title price__title">
+			<h2 class="el_heading price__heading">
 				料金
 			</h2>
 			<p class="description">
@@ -127,7 +131,7 @@
 			</p><!-- /.description -->
 		</section><!-- /.price -->
 		<section class="skills">
-			<h2 class="title skills__title">
+			<h2 class="el_heading skills__heading">
 				スキル
 			</h2>
 			<ul class="skills">
@@ -149,7 +153,7 @@
 		</section><!-- /.skills -->
 
 		<section class="performance">
-			<h2 class="title performance__title">実績</h2>
+			<h2 class="el_heading performance__heading">実績</h2>
 
 			現在教育系教材紹介サイトのコーディング、WordPress化進行中
 			学習リンク集１
@@ -162,7 +166,7 @@
 
 		</section><!-- /.performance -->
 		<section class="about">
-			<h2 class="title about__title">私について</h2>
+			<h2 class="el_heading about__heading">私について</h2>
 			<p class="description">
 				２０１９年春頃から本格的にプログラミングやウェブ制作の学習にとりくみはじめました。教員経験を通して培ってきたコミュニケーション力や課題解決力をウェブ制作事業によって社会に還元したいという思いが募り、現在副業でウェブ制作・開発にとりくんでいます。
 			</p><!-- /.description -->
@@ -171,7 +175,7 @@
 		</section><!-- /.about -->
 
 		<section class="contact">
-			<h2 class="title contact__title">コンタクト</h2>
+			<h2 class="el_heading contact__heading">コンタクト</h2>
 
 		</section><!-- /.contact -->
 	</main>
@@ -187,12 +191,3 @@
 
 		</div><!-- /.footer -->
 	</footer>　
-
-
-
-
-
-
-</body>
-
-</html>
