置換間違い修正

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 	<link rel="stylesheet" href="./styles/vendors/bootstrap-reboot.css">
 	<link rel="stylesheet" href="./styles/style.css">
-	<heading>WEBSON | 大阪のウェブ制作フリーランス</heading>
+	<title>WEBSON | 大阪のウェブ制作フリーランス</title>
 </head>
 
 <body>
