スキルブロック

--- a/index.html
+++ b/index.html
@@ -103,16 +103,16 @@
 
 			<div class="bl_card_wrapper">
 				<div class="card">
+					<h3>ホームページ制作、運用、リニューアル</h3>
 					<figure class="card_image">
 						<img src="./images/computer.png" alt="">
 					</figure><!-- /.card_image -->
-					<h3>ホームページ制作、運用、リニューアル</h3>
 				</div>
 				<div class="card">
+					<h3>SEO対策、SNS運用代行、コンサルティング</h3>
 					<figure class="card_image">
 						<img src="./images/seo.png" alt="">
 					</figure><!-- /.card_image -->
-					<h3>SEO対策、SNS運用代行、コンサルティング</h3>
 				</div>
 			</div><!-- /.ly_card_wrapper -->
 
@@ -130,20 +130,88 @@
 				お気軽にご相談ください。
 			</p><!-- /.description -->
 		</section><!-- /.price -->
-		<section class="skills">
-			<h2 class="el_heading skills__heading">
-				スキル
-			</h2>
-			<ul class="skills">
-				<li class="skill-item"> HTML
-				</li><!-- /.skill-item -->
-				<li class="skill-item">CSS
-				</li><!-- /.skill-item -->
-				<li class="skill-item">JavaScript
-				</li><!-- /.skill-item -->
-				<li class="skill-item">WordPress
-				</li><!-- /.skill-item -->
-				<li class="skill-item">GatsbyJS（React）</li><!-- /.skill-item -->
+
+		<section class="bl_skills">
+			<div class="el_heading_wrapper mb-md">
+				<h2 class="el_heading el_heading_skills">
+					スキル
+				</h2>
+			</div><!-- /.el_heading_wrapper -->
+			<ul class="bl_skills_list">
+
+				<li class="el_article">
+
+					<figure class="el_article_image">
+						<img src="./images/html.jpg" alt="">
+					</figure><!-- /.article_image -->
+
+					<div class="bl_skills_txtWrapper">
+						<h3 class="el_skills_itemHeading">
+							HTML
+						</h3><!-- /.el_skills_itemHeading -->
+						<p class="el_skills_item_txt">
+							HTMLのルールにしたがって、サイトのメッセージを適切に構造化します。そうすることで、ユーザーが検索したときに上位に表示されるようにします。
+						</p><!-- /.el_skills_item_txt -->
+					</div><!--/bl_skills_txtWrapper -->
+				<li class="el_article">
+
+					<figure class="el_article_image">
+						<img src="./images/css.jpg" alt="">
+					</figure><!-- /.article_image -->
+
+					<div class="bl_skills_txtWrapper">
+						<h3 class="el_skills_itemHeading">
+							CSS
+						</h3><!-- /.el_skills_itemHeading -->
+						<p class="el_skills_item_txt">
+							サイトのページを増やしたり、ちがう製作者に頼んだりしたいと思ったときに、困らないように設計します。
+						</p><!-- /.el_skills_item_txt -->
+					</div><!--/bl_skills_txtWrapper -->
+				<li class="el_article">
+
+					<figure class="el_article_image">
+						<img src="./images/js.png" alt="">
+					</figure><!-- /.article_image -->
+
+					<div class="bl_skills_txtWrapper">
+						<h3 class="el_skills_itemHeading">
+							JavaScript
+						</h3><!-- /.el_skills_itemHeading -->
+						<p class="el_skills_item_txt">
+							HTMLのルールにしたがって、サイトのメッセージを適切に構造化します。そうすることで、ユーザーが検索したときに上位に表示されるようにします。
+						</p><!-- /.el_skills_item_txt -->
+					</div><!--/bl_skills_txtWrapper -->
+				<li class="el_article">
+
+					<figure class="el_article_image">
+						<img src="./images/wordpress.png" alt="">
+					</figure><!-- /.article_image -->
+
+					<div class="bl_skills_txtWrapper">
+						<h3 class="el_skills_itemHeading">
+							Wordpress
+						</h3><!-- /.el_skills_itemHeading -->
+						<p class="el_skills_item_txt">
+							HTMLのルールにしたがって、サイトのメッセージを適切に構造化します。そうすることで、ユーザーが検索したときに上位に表示されるようにします。
+						</p><!-- /.el_skills_item_txt -->
+					</div><!--/bl_skills_txtWrapper -->
+				<li class="el_article">
+
+					<figure class="el_article_image">
+						<img src="./images/gatsby.png" alt="">
+					</figure><!-- /.article_image -->
+
+					<div class="bl_skills_txtWrapper">
+						<h3 class="el_skills_itemHeading">
+							GatsbyJS
+						</h3><!-- /.el_skills_itemHeading -->
+						<p class="el_skills_item_txt">
+							HTMLのルールにしたがって、サイトのメッセージを適切に構造化します。そうすることで、ユーザーが検索したときに上位に表示されるようにします。
+						</p><!-- /.el_skills_item_txt -->
+					</div><!--/bl_skills_txtWrapper -->
+
+				</li><!-- /.el_skills_item -->
+
 			</ul>
 
 
