技術ブロックのコンテンツ編集

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 							JavaScript
 						</h3><!-- /.el_skills_itemHeading -->
 						<p class="el_skills_item_txt">
-							HTMLのルールにしたがって、サイトのメッセージを適切に構造化します。そうすることで、ユーザーが検索したときに上位に表示されるようにします。
+							ウェブサイトにいろいろな動きを加えます。ユーザーの視線を誘導したり、知らせたい情報を強調したりします。
 						</p><!-- /.el_skills_item_txt -->
 					</div><!--/bl_skills_txtWrapper -->
 				<li class="el_article">
@@ -192,7 +192,7 @@
 							Wordpress
 						</h3><!-- /.el_skills_itemHeading -->
 						<p class="el_skills_item_txt">
-							HTMLのルールにしたがって、サイトのメッセージを適切に構造化します。そうすることで、ユーザーが検索したときに上位に表示されるようにします。
+							ブログを書くような形でコンテンツを更新できるようにします。既存のデザインから選んでサクッと構築することもできますし、オリジナルデザインをWordPressにして運用することもできます。
 						</p><!-- /.el_skills_item_txt -->
 					</div><!--/bl_skills_txtWrapper -->
 				<li class="el_article">
@@ -206,7 +206,7 @@
 							GatsbyJS
 						</h3><!-- /.el_skills_itemHeading -->
 						<p class="el_skills_item_txt">
-							HTMLのルールにしたがって、サイトのメッセージを適切に構造化します。そうすることで、ユーザーが検索したときに上位に表示されるようにします。
+							JAMstackという技術を使ったサイトを構築します。WordPress同様、ブログのようにコンテンツを更新できるサイトの制作もできます。サイトの表示がとても早いので、ユーザーの離脱率が下がったり、検索順位でも有利になったりします。
 						</p><!-- /.el_skills_item_txt -->
 					</div><!--/bl_skills_txtWrapper -->
 
