--- a/index.html
+++ b/index.html
@@ -67,7 +67,17 @@
 		<section class="ly_cont ly_cont_hero">
 			<div class="bl_hero_heading_wrapper">
 				<p class="bl_hero_subHeading">ウェブサイト制作・開発</p>
-				<h1 class="bl_hero_heading">WEBSON</h1>
+				<h1 class="bl_hero_heading">
+					<div class="animate-title">
+						<span id="w" class="char">W</span>
+						<span id="e" class="char">E</span>
+						<span id="b" class="char">B</span>
+						<span id="s" class="char">S</span>
+						<span id="o" class="char">O</span>
+						<span id="n" class="char">N</span>
+
+					</div><!-- /.animate-title -->
+				</h1>
 				<p class="bl_hero_description">
 					ていねいなコミュニケーションをとり、依頼者の状況、要望を的確にとらえ、<br>
 					最適なウェブサイト、施策を提案・構築します。
@@ -78,7 +88,7 @@
 			</figure><!-- /.el_arrow_wrapper -->
 		</section>
 
-		<section class="ly_cont ly_cont_bgBlue">
+		<section id="services" class="ly_cont ly_cont_bgBlue">
 			<div class="bl_text-wrapper">
 				<h2 class="el_heading el_services__heading">
 					サービス内容
@@ -149,7 +159,8 @@
 
 		</section><!-- /.price -->
 
-		<section class="ly_cont ly_cont_bgBlue">
+
+		<section id="skills" class="ly_cont ly_cont_bgBlue">
 			<div class="el_heading_wrapper mb-md">
 				<h2 class="el_heading el_heading_skills">
 					スキル
@@ -188,7 +199,7 @@
 						</p><!-- /.el_skills_item_txt -->
 					</div>
 					<!--/bl_skills_txtWrapper -->
-					</li>
+				</li>
 				<li class="bl_article">
 
 					<figure class="el_article_image">
@@ -204,7 +215,7 @@
 						</p><!-- /.el_skills_item_txt -->
 					</div>
 					<!--/bl_skills_txtWrapper -->
-					</li>
+				</li>
 				<li class="bl_article">
 
 					<figure class="el_article_image">
@@ -220,7 +231,7 @@
 						</p><!-- /.el_skills_item_txt -->
 					</div>
 					<!--/bl_skills_txtWrapper -->
-					</li>
+				</li>
 				<li class="bl_article">
 
 					<figure class="el_article_image">
@@ -243,55 +254,58 @@
 
 		</section><!-- /.skills -->
 
-		<section class="ly_cont">
+		<section id="performance" class="ly_cont">
 			<h2 class="el_heading performance__heading">実績</h2>
 
-<ul>
-	<li class="bl_article bl_article_pfm">
-		<figure class="el_article_image">
-			<img src="./images/performance/01-techmeets.jpg" alt="">
-		</figure><!-- /.article_image -->
+			<ul>
+				<li class="bl_article bl_article_pfm">
+					<figure class="el_article_image">
+						<img src="./images/performance/01-techmeets.jpg" alt="">
+					</figure><!-- /.article_image -->
 
-		<div class="bl_skills_txtWrapper">
-			<h3 class="el_skills_itemHeading">
-				GatsbyJS
-			</h3><!-- /.el_skills_itemHeading -->
-			<p class="el_skills_item_txt">
-				JAMstackという技術を使ったサイトを構築します。WordPress同様、ブログのようにコンテンツを更新できるサイトの制作もできます。サイトの表示がとても早いので、ユーザーの離脱率が下がったり、検索順位でも有利になったりします。
-			</p><!-- /.el_skills_item_txt -->
-		</div>
-		<!--/bl_skills_txtWrapper -->
+					<div class="bl_skills_txtWrapper">
+						<h3 class="el_skills_itemHeading">
+							GatsbyJS
+						</h3><!-- /.el_skills_itemHeading -->
+						<p class="el_skills_item_txt">
+							JAMstackという技術を使ったサイトを構築します。WordPress同様、ブログのようにコンテンツを更新できるサイトの制作もできます。サイトの表示がとても早いので、ユーザーの離脱率が下がったり、検索順位でも有利になったりします。
+						</p><!-- /.el_skills_item_txt -->
+					</div>
+					<!--/bl_skills_txtWrapper -->
 
-	</li><!-- /.el_skills_item -->
-	<li class="bl_article bl_article_pfm">
-		<figure class="el_article_image">
-			<a href="https://horumont.info"><img src="./images/performance/02-takamina-link.jpg" alt=""></a>
-		</figure><!-- /.article_image -->
+				</li><!-- /.el_skills_item -->
+				<li class="bl_article bl_article_pfm">
+					<figure class="el_article_image">
+						<a href="https://horumont.info"><img src="./images/performance/02-takamina-link.jpg" alt=""></a>
+					</figure><!-- /.article_image -->
 
-		<div class="bl_skills_txtWrapper">
-			<h3 class="el_skills_itemHeading">
-				GatsbyJS
-			</h3><!-- /.el_skills_itemHeading -->
-			<p class="el_skills_item_txt">
-				JAMstackという技術を使ったサイトを構築します。WordPress同様、ブログのようにコンテンツを更新できるサイトの制作もできます。サイトの表示がとても早いので、ユーザーの離脱率が下がったり、検索順位でも有利になったりします。
-			</p><!-- /.el_skills_item_txt -->
-		</div>
-		<!--/bl_skills_txtWrapper -->
+					<div class="bl_skills_txtWrapper">
+						<h3 class="el_skills_itemHeading">
+							GatsbyJS
+						</h3><!-- /.el_skills_itemHeading -->
+						<p class="el_skills_item_txt">
+							JAMstackという技術を使ったサイトを構築します。WordPress同様、ブログのようにコンテンツを更新できるサイトの制作もできます。サイトの表示がとても早いので、ユーザーの離脱率が下がったり、検索順位でも有利になったりします。
+						</p><!-- /.el_skills_item_txt -->
+					</div>
+					<!--/bl_skills_txtWrapper -->
 
-	</li><!-- /.el_skills_item -->
-</ul>
+				</li><!-- /.el_skills_item -->
+			</ul>
 
 
-			現在教育系教材紹介サイトのコーディング、WordPress化進行中
-			学習リンク集１
-			学習リンク集２
-			ポートフォリオサイト最初のバージョン
-			八尾市教職員組合　新規採用者向け特設LP
-			TECHMEETS
-			デザインカンプからコーディング
+			<p>
+				現在教育系教材紹介サイトのコーディング、WordPress化進行中
+				学習リンク集１
+				学習リンク集２
+				ポートフォリオサイト最初のバージョン
+				八尾市教職員組合　新規採用者向け特設LP
+				TECHMEETS
+				デザインカンプからコーディング
+			</p>
 
 
 		</section><!-- /.performance -->
+
 		<section class="ly_cont ly_cont_bgBlue">
 			<h2 class="el_heading about__heading">私について</h2>
 			<p class="description">
@@ -318,3 +332,14 @@
 
 		</div><!-- /.footer -->
 	</footer>　
+
+
+
+
+
+	<script src="//cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
+
+	<script src="./scripts/main.js"></script>
+</body>
+
+</html>
