--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<section class="ly_header_inner">
 			<figure class="el_headerLogo hl_shadow">
 				<img src="./images/WEBSON.png" alt="">
-			</figure><!-- /.el_headerLo -->
+			</figure>
 			<nav>
 				<ul class="bl_headerNav hl_shadow">
 					<li class="bl_headerNav_item">
@@ -65,7 +65,7 @@
 	</header>
 	<main>
 		<section class="ly_cont ly_cont_hero">
-			<div class="bl_hero_heading_wrapper">
+			<div class="ly_hero_heading">
 				<p class="bl_hero_subHeading">ウェブサイト制作・開発</p>
 				<h1 class="bl_hero_heading">
 					<div class="animate-title">
@@ -82,11 +82,13 @@
 					ていねいなコミュニケーションをとり、依頼者の状況、要望を的確にとらえ、<br>
 					最適なウェブサイト、施策を提案・構築します。
 				</p>
-			</div><!-- /.hero__text -->
+			</div>
 			<figure class="el_arrow_wrapper">
 				<img class="el_arrow" src="./images/arrow.png" alt="">
 			</figure><!-- /.el_arrow_wrapper -->
 		</section>
+
+		<!-- servicesBlock -->
 
 		<section id="services" class="ly_cont ly_cont_bgBlue">
 			<div class="bl_text-wrapper">
@@ -120,10 +122,9 @@
 					</figure><!-- /.card_image -->
 				</div>
 			</div><!-- /.ly_card_wrapper -->
-
-
-
 		</section><!-- /.services -->
+
+		<!-- priceBlock -->
 
 		<section class="ly_cont">
 			<h2 class="el_heading price__heading">
@@ -134,34 +135,14 @@
 				サブスクリプションによる契約など、お客様の状況に応じた契約が可能ですので、
 				お気軽にご相談ください。
 			</p><!-- /.description -->
-			<table>
-				<tr>
-					<th>無料プラン</th>
-					<th class="popular"><span class="inner"><span class="no1">人気No.1</span>初級プラン</span></th>
-					<th>上級プラン</th>
-				</tr>
-				<tr>
-					<td>¥0</td>
-					<td class="popular">¥5,000</td>
-					<td>¥8,000</td>
-				</tr>
-				<tr>
-					<td><a href="#">申し込み</a></td>
-					<td><a href="#">申し込み</a></td>
-					<td><a href="#">申し込み</a></td>
-				</tr>
-				<tr>
-					<td>保証なし</td>
-					<td class="popular">保証1ヶ月</td>
-					<td>保証3ヶ月</td>
-				</tr>
-			</table>
+
 
 		</section><!-- /.price -->
 
+		<!-- skillsBlock -->
 
 		<section id="skills" class="ly_cont ly_cont_bgBlue">
-			<div class="el_heading_wrapper mb-md">
+			<div class="ly_heading">
 				<h2 class="el_heading el_heading_skills">
 					スキル
 				</h2>
@@ -169,11 +150,9 @@
 			<ul class="bl_skills_list">
 
 				<li class="bl_article">
-
 					<figure class="el_article_image">
-						<img src="./images/skills/html.jpg" alt="">
+						<img src="./images/skills/html.png" alt="">
 					</figure><!-- /.article_image -->
-
 					<div class="bl_skills_txtWrapper">
 						<h3 class="el_skills_itemHeading">
 							HTML
@@ -185,11 +164,9 @@
 					<!--/bl_skills_txtWrapper -->
 				</li>
 				<li class="bl_article">
-
 					<figure class="el_article_image">
-						<img src="./images/skills/css.jpg" alt="">
+						<img src="./images/skills/css.png" alt="">
 					</figure><!-- /.article_image -->
-
 					<div class="bl_skills_txtWrapper">
 						<h3 class="el_skills_itemHeading">
 							CSS
@@ -200,12 +177,11 @@
 					</div>
 					<!--/bl_skills_txtWrapper -->
 				</li>
-				<li class="bl_article">
 
+				<li class="bl_article">
 					<figure class="el_article_image">
 						<img src="./images/skills/js.png" alt="">
 					</figure><!-- /.article_image -->
-
 					<div class="bl_skills_txtWrapper">
 						<h3 class="el_skills_itemHeading">
 							JavaScript
@@ -216,12 +192,11 @@
 					</div>
 					<!--/bl_skills_txtWrapper -->
 				</li>
+
 				<li class="bl_article">
-
 					<figure class="el_article_image">
-						<img src="./images/skills/wordpress.png" alt="">
+						<img src="./images/skills/wordperss.png" alt="">
 					</figure><!-- /.article_image -->
-
 					<div class="bl_skills_txtWrapper">
 						<h3 class="el_skills_itemHeading">
 							Wordpress
@@ -232,12 +207,11 @@
 					</div>
 					<!--/bl_skills_txtWrapper -->
 				</li>
-				<li class="bl_article">
 
+				<li class="bl_article">
 					<figure class="el_article_image">
 						<img src="./images/skills/gatsby.png" alt="">
 					</figure><!-- /.article_image -->
-
 					<div class="bl_skills_txtWrapper">
 						<h3 class="el_skills_itemHeading">
 							GatsbyJS
@@ -247,15 +221,38 @@
 						</p><!-- /.el_skills_item_txt -->
 					</div>
 					<!--/bl_skills_txtWrapper -->
+				</li><!-- /.el_skills_item -->
 
+				<li class="bl_article">
+					<figure class="el_article_image">
+						<img src="./images/skills/gatsby.png" alt="">
+					</figure><!-- /.article_image -->
+					<div class="bl_skills_txtWrapper">
+						<h3 class="el_skills_itemHeading">
+							ホワイトボード・ミーティング®
+						</h3><!-- /.el_skills_itemHeading -->
+						<p class="el_skills_item_txt">
+							株式会社ひとまちが運営する民間の会議スキル。認定講師の資格を持っています。会議において的確で効率的な情報共有のスキルです。参考リンクは
+							<a class="el_link_white" href="https://wbmf.info/">こちら</a>
+						</p><!-- /.el_skills_item_txt -->
+					</div>
+					<!--/bl_skills_txtWrapper -->
 				</li><!-- /.el_skills_item -->
 
 			</ul>
 
 		</section><!-- /.skills -->
 
+		<!-- performanceBlock -->
+
 		<section id="performance" class="ly_cont">
-			<h2 class="el_heading performance__heading">実績</h2>
+			<div class="ly_heading">
+				<h2 class="el_heading performance__heading">実績</h2>
+				<p class="el_description">
+					これまでの制作実績を掲載しています。案件として受けたものでも、後悔ができないものもありますので、気になる方はお問い合わせください。
+				</p>
+
+			</div>
 
 			<ul>
 				<li class="bl_article bl_article_pfm">
@@ -290,6 +287,54 @@
 					<!--/bl_skills_txtWrapper -->
 
 				</li><!-- /.el_skills_item -->
+				<li class="bl_article bl_article_pfm">
+					<figure class="el_article_image">
+						<a href="https://horumont.info"><img src="./images/performance/03-takamina-link3.jpg" alt=""></a>
+					</figure><!-- /.article_image -->
+
+					<div class="bl_skills_txtWrapper">
+						<h3 class="el_skills_itemHeading">
+							GatsbyJS
+						</h3><!-- /.el_skills_itemHeading -->
+						<p class="el_skills_item_txt">
+							JAMstackという技術を使ったサイトを構築します。WordPress同様、ブログのようにコンテンツを更新できるサイトの制作もできます。サイトの表示がとても早いので、ユーザーの離脱率が下がったり、検索順位でも有利になったりします。
+						</p><!-- /.el_skills_item_txt -->
+					</div>
+					<!--/bl_skills_txtWrapper -->
+
+				</li><!-- /.el_skills_item -->
+				<li class="bl_article bl_article_pfm">
+					<figure class="el_article_image">
+						<a href="https://horumont.info"><img src="./images/performance/04-bochi.jpg" alt=""></a>
+					</figure><!-- /.article_image -->
+
+					<div class="bl_skills_txtWrapper">
+						<h3 class="el_skills_itemHeading">
+							GatsbyJS
+						</h3><!-- /.el_skills_itemHeading -->
+						<p class="el_skills_item_txt">
+							JAMstackという技術を使ったサイトを構築します。WordPress同様、ブログのようにコンテンツを更新できるサイトの制作もできます。サイトの表示がとても早いので、ユーザーの離脱率が下がったり、検索順位でも有利になったりします。
+						</p><!-- /.el_skills_item_txt -->
+					</div>
+					<!--/bl_skills_txtWrapper -->
+
+				</li><!-- /.el_skills_item -->
+				<li class="bl_article bl_article_pfm">
+					<figure class="el_article_image">
+						<a href="https://horumont.info"><img src="./images/performance/05-ytu.jpg" alt=""></a>
+					</figure><!-- /.article_image -->
+
+					<div class="bl_skills_txtWrapper">
+						<h3 class="el_skills_itemHeading">
+							GatsbyJS
+						</h3><!-- /.el_skills_itemHeading -->
+						<p class="el_skills_item_txt">
+							JAMstackという技術を使ったサイトを構築します。WordPress同様、ブログのようにコンテンツを更新できるサイトの制作もできます。サイトの表示がとても早いので、ユーザーの離脱率が下がったり、検索順位でも有利になったりします。
+						</p><!-- /.el_skills_item_txt -->
+					</div>
+					<!--/bl_skills_txtWrapper -->
+
+				</li><!-- /.el_skills_item -->
 			</ul>
 
 
@@ -307,6 +352,7 @@
 		</section><!-- /.performance -->
 
 		<section class="ly_cont ly_cont_bgBlue">
+			<img src="./images/icon.png" alt="">
 			<h2 class="el_heading about__heading">私について</h2>
 			<p class="description">
 				２０１９年春頃から本格的にプログラミングやウェブ制作の学習にとりくみはじめました。教員経験を通して培ってきたコミュニケーション力や課題解決力をウェブ制作事業によって社会に還元したいという思いが募り、現在副業でウェブ制作・開発にとりくんでいます。
