--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 	<main>
 		<section class="ly_cont ly_cont_hero">
 			<div class="ly_hero_heading">
-				<p class="bl_hero_subHeading">ウェブサイト制作・開発</p>
+				<p class="bl_hero_subHeading textAnimate">ウェブサイト制作・開発</p>
 				<h1 class="bl_hero_heading">
 					<div class="animate-title">
 						<span id="w" class="char">W</span>
@@ -78,7 +78,7 @@
 
 					</div><!-- /.animate-title -->
 				</h1>
-				<p class="bl_hero_description">
+				<p class="bl_hero_description textAnimate">
 					ていねいなコミュニケーションをとり、依頼者の状況、要望を的確にとらえ、<br>
 					最適なウェブサイト、施策を提案・構築します。
 				</p>
@@ -91,22 +91,24 @@
 		<!-- servicesBlock -->
 
 		<section id="services" class="ly_cont ly_cont_bgBlue">
-			<div class="bl_text-wrapper">
-				<h2 class="el_heading el_services__heading">
-					サービス内容
-				</h2>
-				<div class="bl_descripton">
-					<p class="description">
+			<div class="ly_intro">
+				<div class="bl_heading">
+					<h2>
+						サービス内容
+					</h2>
+				</div>
+				<div class="bl_descripton__white">
+					<p>
 						なんのためにウェブサイトをつくるのでしょうか。作りたいと思う人それぞれに、目的があるはずです。目的に応じた、ホームページ制作、運用、施策を提案します。
-					</p><!-- /.description -->
-					<p class="description">
+					</p>
+					<p>
 						WEBSONでは、効率的、効果的に会議を進める技術であるホワイトボード・ミーティング®認定講師資格を持ったそんほんすが、お客様の状況をしっかりと効率よくききとります。（ホワイトボードがなくても大丈夫）
-					</p><!-- /.description -->
-					<p class="description">
+					</p>
+					<p>
 						Web技術に明るくなくても大丈夫です。教員経験のあるそんほんすは、あなたの意識にあるキーワードから、適切に課題を導き出し、対応策をわかりやすくご説明いたします。
-					</p><!-- /.description -->
-				</div><!-- /.bl-descripton -->
-			</div><!-- /.text-wrapper -->
+					</p>
+				</div><!-- /.bl-description -->
+			</div>
 
 			<div class="bl_card_wrapper">
 				<div class="card">
@@ -127,28 +129,39 @@
 		<!-- priceBlock -->
 
 		<section class="ly_cont">
-			<h2 class="el_heading price__heading">
-				料金
-			</h2>
-			<p class="description">
-				以下に料金表を示します。基本的な総額を表示しています。
-				サブスクリプションによる契約など、お客様の状況に応じた契約が可能ですので、
-				お気軽にご相談ください。
-			</p><!-- /.description -->
+			<div class="ly_intro">
+				<div class="bl_heading">
+					<h2 class="el_heading">
+						料金
+					</h2>
+				</div><!-- /.bl_heading -->
 
-
+				<div class="bl_description">
+					<p>
+						以下に料金表を示します。基本的な総額を表示しています。
+						サブスクリプションによる契約など、お客様の状況に応じた契約が可能ですので、
+						お気軽にご相談ください。
+					</p>
+				</div><!-- /.bl_description -->
+			</div>
 		</section><!-- /.price -->
 
 		<!-- skillsBlock -->
 
 		<section id="skills" class="ly_cont ly_cont_bgBlue">
-			<div class="ly_heading">
-				<h2 class="el_heading el_heading_skills">
-					スキル
-				</h2>
-			</div><!-- /.el_heading_wrapper -->
-			<ul class="bl_skills_list">
 
+			<div class="ly_intro">
+				<div class="bl_heading">
+					<h2>スキル</h2>
+				</div><!-- /.bl_heading -->
+
+				<div class="bl_description__white">
+					<p>
+						スキルのイントロダクション
+					</p>
+				</div><!-- /.bl_description -->
+			</div>
+			<ul class="bl_skills_list">
 				<li class="bl_article">
 					<figure class="el_article_image">
 						<img src="./images/skills/html.png" alt="">
@@ -246,11 +259,15 @@
 		<!-- performanceBlock -->
 
 		<section id="performance" class="ly_cont">
-			<div class="ly_heading">
-				<h2 class="el_heading performance__heading">実績</h2>
-				<p class="el_description">
-					これまでの制作実績を掲載しています。案件として受けたものでも、後悔ができないものもありますので、気になる方はお問い合わせください。
-				</p>
+			<div class="ly_intro">
+				<div class="bl_heading">
+					<h2>実績</h2>
+				</div><!-- /.bl_heading -->
+				<div class="bl_description">
+					<p>
+						これまでの制作実績を掲載しています。案件として受けたものでも、後悔ができないものもありますので、気になる方はお問い合わせください。
+					</p>
+				</div><!-- /.bl_description -->
 
 			</div>
 
@@ -352,13 +369,19 @@
 		</section><!-- /.performance -->
 
 		<section class="ly_cont ly_cont_bgBlue">
-			<img src="./images/icon.png" alt="">
-			<h2 class="el_heading about__heading">私について</h2>
-			<p class="description">
-				２０１９年春頃から本格的にプログラミングやウェブ制作の学習にとりくみはじめました。教員経験を通して培ってきたコミュニケーション力や課題解決力をウェブ制作事業によって社会に還元したいという思いが募り、現在副業でウェブ制作・開発にとりくんでいます。
-			</p><!-- /.description -->
-			<a href="#">もっと読む >>></a>
+			<div class="ly_intro">
+				<div class="bl_heading">
+					<h2>私について</h2>
+				</div>
+				<div class="bl_description__white">
+					<p>
+						２０１９年春頃から本格的にプログラミングやウェブ制作の学習にとりくみはじめました。教員経験を通して培ってきたコミュニケーション力や課題解決力をウェブ制作事業によって社会に還元したいという思いが募り、現在副業でウェブ制作・開発にとりくんでいます。
+					</p><!-- /.description -->
+					<a class="el_link_white" href="#">もっと読む >>></a>
+				</div><!-- /.bl_description -->
+			</div><!-- /.ly_intro -->
 
+			<img src="./images/icon.png" alt="">
 		</section><!-- /.about -->
 
 		<section class="ly_cont">
