--- a/index.html
+++ b/index.html
@@ -114,25 +114,36 @@
 					</p>
 					<p>
 						Web技術に明るくなくても大丈夫です。教員経験のあるそんほんすは、あなたの意識にあるキーワードから、適切に課題を導き出し、対応策をわかりやすくご説明いたします。
-					</p>
 				</div><!-- /.bl-description -->
 			</div>
 
 			<div class="bl_card_wrapper">
-				<div class="card">
-					<h3>ホームページ制作、運用、リニューアル</h3>
-					<figure class="card_image">
-						<img src="./images/computer.png" alt="">
-					</figure><!-- /.card_image -->
 
-				</div>
-				<div class="card">
-					<h3>SEO対策、SNS運用代行、コンサルティング</h3>
-					<figure class="card_image">
+				<div class="bl_card">
+					<figure class="bl_card_image">
 						<img src="./images/seo.png" alt="">
-					</figure><!-- /.card_image -->
+					</figure><!-- /.bl_card_image -->
+					<bl_card_textWrapper>
+						<h3>SEO対策、SNS運用代行、コンサルティング</h3>
+						<div class="bl_card_description">
+							<p>集客のお手伝いをいたします。サイトとの連動など総合的に状況を判断して、効果的な施策を提案、代行等いたします。代表のそんほんすが対応するので、フットワーク軽く様々なご相談をお受けいたします。</p>
+						</div><!-- /.bl_card_description -->
+					</bl_card_textWrapper>
 				</div>
-			</div><!-- /.ly_card_wrapper -->
+				<div class="bl_card">
+					<figure class="bl_card_image">
+						<img src="./images/computer.png" alt="">
+					</figure><!-- /.bl_card_image -->
+					<bl_card_textWrapper>
+						<h3>SEO対策、SNS運用代行、コンサルティング</h3>
+						<div class="bl_card_description">
+							<p>集客のお手伝いをいたします。サイトとの連動など総合的に状況を判断して、効果的な施策を提案、代行等いたします。代表のそんほんすが対応するので、フットワーク軽く様々なご相談をお受けいたします。</p>
+						</div><!-- /.bl_card_description -->
+					</bl_card_textWrapper>
+				</div>
+
+
+
 		</section><!-- /.services -->
 
 		<!-- priceBlock -->
@@ -150,9 +161,18 @@
 						以下に料金表を示します。基本的な総額を表示しています。
 						サブスクリプションによる契約など、お客様の状況に応じた契約が可能ですので、
 						お気軽にご相談ください。
-
 					</p>
 				</div><!-- /.bl_description -->
+				<div class="bl_price_content">
+					ウェブサイト制作　１５万円〜
+					一般的なウェブサイト、WordPress、JAMstackなどの技術やページ数などによって変動いたします。まずはご相談ください。
+					ウェブサイトの保守運用　１５０００円／月〜
+					SNS運用代行・SNS運用コンサルティング
+					それぞれ、お客様の業種や状況に合わせて、ご提案いたします。１００００円／月〜
+					　
+
+
+				</div><!-- /.bl_price_content -->
 			</div>
 		</section><!-- /.price -->
 
@@ -266,9 +286,9 @@
 
 		</section><!-- /.skills -->
 
-		<!-- performanceBlock -->
+		<!-- worksBlock -->
 
-		<section id="performance" class="ly_cont">
+		<section id="works" class="ly_cont">
 			<div class="ly_intro">
 				<div class="bl_heading">
 					<h2>実績</h2>
@@ -284,190 +304,225 @@
 
 			<ul>
 				<li class="bl_article bl_article_pfm">
-					<div class="performance_imgWrapper hp_shadow">
+					<div class="works_imgWrapper hp_shadow">
 						<figure class="el_article_image">
-							<img src="./images/performance/01-techmeets.jpg" alt="">
+							<img src="./images/works/01-techmeets.jpg" alt="">
 						</figure><!-- /.article_image -->
-						<ul class="performance_link_wrapper">
+						<ul class="works_link_wrapper">
 							<li><a href="">
-								<i class="fab fa-github"></i>
-							</a></li>
-							<li><a href="">
-								<i class="fas fa-external-link-alt"></i>
-							</a></li>
-							<li><a href="">
-								<i class="fas fa-image"></i>
-							</a></li>
-						</ul><!-- /.performance__link -->
-					</div><!-- /.performance_imgWrapper -->
-
-					<div class="bl_skills_txtWrapper">
-						<h3 class="el_skills_itemHeading">
-							GatsbyJS
-						</h3><!-- /.el_skills_itemHeading -->
-						<p class="el_skills_item_txt">
-							JAMstackという技術を使ったサイトを構築します。WordPress同様、ブログのようにコンテンツを更新できるサイトの制作もできます。サイトの表示がとても早いので、ユーザーの離脱率が下がったり、検索順位でも有利になったりします。
-						</p><!-- /.el_skills_item_txt -->
-					</div>
-					<!--/bl_skills_txtWrapper -->
-
-				</li><!-- /.el_skills_item -->
-				<li class="bl_article bl_article_pfm">
-
-					<div class="performance_imgWrapper hp_shadow">
-						<figure class="el_article_image">
-							<a href="https://horumont.info"><img src="./images/performance/02-takamina-link.jpg" alt=""></a>
-						</figure><!-- /.article_image -->
-						<ul class="performance_link_wrapper">
-							<li><a href="">
-								<i class="fab fa-github"></i>
-							</a></li>
-							<li><a href="">
-								<i class="fas fa-external-link-alt"></i>
-							</a></li>
-							<li><a href="">
-								<i class="fas fa-image"></i>
-							</a></li>
-						</ul><!-- /.performance__link -->
-					</div>
-
-					<div class="bl_skills_txtWrapper">
-						<h3 class="el_skills_itemHeading">
-							GatsbyJS
-						</h3><!-- /.el_skills_itemHeading -->
-						<p class="el_skills_item_txt">
-							JAMstackという技術を使ったサイトを構築します。WordPress同様、ブログのようにコンテンツを更新できるサイトの制作もできます。サイトの表示がとても早いので、ユーザーの離脱率が下がったり、検索順位でも有利になったりします。
-						</p><!-- /.el_skills_item_txt -->
-
-					</div>
-					<!--/bl_skills_txtWrapper -->
-
-				</li><!-- /.el_skills_item -->
-				<li class="bl_article bl_article_pfm">
-					<div class="performance">
-							<div class="performance_imgWrapper hp_shadow">
-							<figure class="el_article_image">
-								<a href="https://horumont.info"><img src="./images/performance/03-takamina-link3.jpg" alt=""></a>
-							</figure><!-- /.article_image -->
-							<ul class="performance_link_wrapper">
-								<li><a href="">
 									<i class="fab fa-github"></i>
 								</a></li>
-								<li><a href="">
+							<li><a href="">
 									<i class="fas fa-external-link-alt"></i>
 								</a></li>
-								<li><a href="">
+							<li><a href="">
 									<i class="fas fa-image"></i>
 								</a></li>
-							</ul><!-- /.performance__link -->
-						</div><!-- /.performance -->
-					</div><!-- /.performance_imgWrapper -->
+						</ul><!-- /.works__link -->
+					</div><!-- /.works_imgWrapper -->
 
 					<div class="bl_skills_txtWrapper">
 						<h3 class="el_skills_itemHeading">
-							GatsbyJS
+							TECHMEETSさん提供のデザインカンプ
 						</h3><!-- /.el_skills_itemHeading -->
 						<p class="el_skills_item_txt">
-							JAMという技術を使ったサイトを構築します。WordPress同様、ブログのようにコンテンツを更新できるサイトの制作もできます。サイトの表示がとても早いので、ユーザーの離脱率が下がったり、検索順位でも有利になったりします。
+							TECHMEETSさんが提供してくれたカンプをコーディング。レスポンシブ対応。基本的にはBEMを意識してクラス名をつけました。
+
+						</p><!-- /.el_skills_item_txt -->
+
+					</div>
+					<!--/bl_skills_txtWrapper -->
+
+				</li><!-- /.el_skills_item -->
+				<li class="bl_article bl_article_pfm">
+
+					<div class="works_imgWrapper hp_shadow">
+						<figure class="el_article_image">
+							<a href="https://horumont.info"><img src="./images/works/02-takamina-link.jpg" alt=""></a>
+						</figure><!-- /.article_image -->
+						<ul class="works_link_wrapper">
+							<li><a href="">
+									<i class="fab fa-github"></i>
+								</a></li>
+							<li><a href="">
+									<i class="fas fa-external-link-alt"></i>
+								</a></li>
+							<li><a href="">
+									<i class="fas fa-image"></i>
+								</a></li>
+						</ul><!-- /.works__link -->
+					</div>
+
+					<div class="bl_skills_txtWrapper">
+						<h3 class="el_skills_itemHeading">
+							パソコンの勉強に使えるリンク集
+						</h3><!-- /.el_skills_itemHeading -->
+						<p class="el_skills_item_txt">
+							学校で、プログラミング教育が導入されるということで、苦手な先生のクラスでも、プログラミングのサイトにアクセスできるようにしたいという課題がありました。所属しているコミュニティ内の勉強会で作ったものです。
+						</p><!-- /.el_skills_item_txt -->
+
+
+					</div>
+					<!--/bl_skills_txtWrapper -->
+
+				</li><!-- /.el_skills_item -->
+				<li class="bl_article bl_article_pfm">
+					<div class="works">
+						<div class="works_imgWrapper hp_shadow">
+							<figure class="el_article_image">
+								<a href="https://horumont.info"><img src="./images/works/03-takamina-link3.jpg" alt=""></a>
+							</figure><!-- /.article_image -->
+							<ul class="works_link_wrapper">
+								<li><a href="">
+										<i class="fab fa-github"></i>
+									</a></li>
+								<li><a href="">
+										<i class="fas fa-external-link-alt"></i>
+									</a></li>
+								<li><a href="">
+										<i class="fas fa-image"></i>
+									</a></li>
+							</ul><!-- /.works__link -->
+						</div><!-- /.works -->
+					</div><!-- /.works_imgWrapper -->
+
+					<div class="bl_skills_txtWrapper">
+						<h3 class="el_skills_itemHeading">
+							パソコンのべんきょうのためのリンク
+						</h3><!-- /.el_skills_itemHeading -->
+						<p class="el_skills_item_txt">
+							１つ目の「パソコンの勉強に使えるリンク集」のあと、もう少しこんなのにしたい！という思いをかなえるために作り上げました。これもコミュニティの勉強会で作りました。
 						</p><!-- /.el_skills_item_txt -->
 					</div>
 					<!--/bl_skills_txtWrapper -->
 
 				</li><!-- /.el_skills_item -->
 				<li class="bl_article bl_article_pfm">
-					<div class="performance_imgWrapper hp_shadow">
+					<div class="works_imgWrapper hp_shadow">
 						<figure class="el_article_image">
-							<a href="https://horumont.info"><img src="./images/performance/04-bochi.jpg" alt=""></a>
+							<a href="https://horumont.info"><img src="./images/works/04-bochi.jpg" alt=""></a>
 						</figure><!-- /.article_image -->
-						<ul class="performance_link_wrapper">
+						<ul class="works_link_wrapper">
 							<li><a href="">
-								<i class="fab fa-github"></i>
-							</a></li>
+									<i class="fab fa-github"></i>
+								</a></li>
 							<li><a href="">
-								<i class="fas fa-external-link-alt"></i>
-							</a></li>
+									<i class="fas fa-external-link-alt"></i>
+								</a></li>
 							<li><a href="">
-								<i class="fas fa-image"></i>
-							</a></li>
-						</ul><!-- /.performance__link -->
-					</div><!-- /.performance_imgWrapper -->
+									<i class="fas fa-image"></i>
+								</a></li>
+						</ul><!-- /.works__link -->
+					</div><!-- /.works_imgWrapper -->
 
 					<div class="bl_skills_txtWrapper">
 						<h3 class="el_skills_itemHeading">
-							GatsbyJS
+							ぼちぼちブログ
 						</h3><!-- /.el_skills_itemHeading -->
 						<p class="el_skills_item_txt">
-							JAMstackという技術を使ったサイトを構築します。WordPress同様、ブログのようにコンテンツを更新できるサイトの制作もできます。サイトの表示がとても早いので、ユーザーの離脱率が下がったり、検索順位でも有利になったりします。
+							WordPressブログ。無料テーマCocoonを使用しています。自分の経験を発信できればと思って作りました。広告やアフィリエイトなども少しここで体験しようと思っています。
 						</p><!-- /.el_skills_item_txt -->
 					</div>
 					<!--/bl_skills_txtWrapper -->
 
 				</li><!-- /.el_skills_item -->
-				<li class="bl_article bl_article_pfm"
-				>
-					<div class="performance_imgWrapper hp_shadow">
+				<li class="bl_article bl_article_pfm">
+					<div class="works_imgWrapper hp_shadow">
 						<figure class="el_article_image">
-							<a href="https://horumont.info"><img src="./images/performance/05-ytu.jpg" alt=""></a>
+							<a href="https://horumont.info"><img src="./images/works/05-ytu.jpg" alt=""></a>
 						</figure><!-- /.article_image -->
-						<ul class="performance_link_wrapper">
+						<ul class="works_link_wrapper">
 							<li><a href="">
-								<i class="fab fa-github"></i>
-							</a></li>
+									<i class="fab fa-github"></i>
+								</a></li>
 							<li><a href="">
-								<i class="fas fa-external-link-alt"></i>
-							</a></li>
+									<i class="fas fa-external-link-alt"></i>
+								</a></li>
 							<li><a href="">
-								<i class="fas fa-image"></i>
-							</a></li>
-						</ul><!-- /.performance__link -->
-					</div><!-- /.performance_imgWrapper -->
+									<i class="fas fa-image"></i>
+								</a></li>
+						</ul><!-- /.works__link -->
+					</div><!-- /.works_imgWrapper -->
 
 					<div class="bl_skills_txtWrapper">
 						<h3 class="el_skills_itemHeading">
-							GatsbyJS
+							八尾市教職員組合　新規採用者向けLP
 						</h3><!-- /.el_skills_itemHeading -->
 						<p class="el_skills_item_txt">
-							JAMstackという技術を使ったサイトを構築します。WordPress同様、ブログのようにコンテンツを更新できるサイトの制作もできます。サイトの表示がとても早いので、ユーザーの離脱率が下がったり、検索順位でも有利になったりします。
+							ライティング、情報設計、デザイン、コーディングをしました。ターゲットが市内の教職員なので、基本的な流入経路はチラシにつけたQRコードです。
+						</p><!-- /.el_skills_item_txt -->
+					</div>
+					<!--/bl_skills_txtWrapper -->
+				</li><!-- /.el_skills_item -->
+
+				<li class="bl_article bl_article_pfm">
+					<div class="works_imgWrapper hp_shadow">
+						<figure class="el_article_image">
+							<a href="https://horumont.info"><img src="./images/works/06-micro-cms.jpg" alt=""></a>
+						</figure><!-- /.article_image -->
+						<ul class="works_link_wrapper">
+							<li><a href="">
+									<i class="fab fa-github"></i>
+								</a></li>
+							<li><a href="">
+									<i class="fas fa-external-link-alt"></i>
+								</a></li>
+							<li><a href="">
+									<i class="fas fa-image"></i>
+								</a></li>
+						</ul><!-- /.works__link -->
+					</div><!-- /.works_imgWrapper -->
+
+					<div class="bl_skills_txtWrapper">
+						<h3 class="el_skills_itemHeading">
+							Gatsby-microCMS連携ブログサイト
+						</h3><!-- /.el_skills_itemHeading -->
+						<p class="el_skills_item_txt">
+							フロントにGatbyjs ヘッドレスCMSにmicroCMSを使ってブログサイトを作成。デザインはstartBootstrapのテンプレートを使用しました。
 						</p><!-- /.el_skills_item_txt -->
 					</div>
 					<!--/bl_skills_txtWrapper -->
 
 				</li><!-- /.el_skills_item -->
+
+
 			</ul>
 
 
-			<p>
-				現在教育系教材紹介サイトのコーディング、WordPress化進行中
-				学習リンク集１
-				学習リンク集２
-				ポートフォリオサイト最初のバージョン
-				八尾市教職員組合　新規採用者向け特設LP
-				TECHMEETS
-				デザインカンプからコーディング
-			</p>
-
-
-		</section><!-- /.performance -->
+		</section><!-- /.works -->
 
 		<section class="ly_cont ly_cont_bgBlue">
 			<div class="ly_intro">
-				<div class="bl_heading">
-					<h2>私について</h2>
-				</div>
-				<div class="bl_description__white">
-					<p>
-						２０１９年春頃から本格的にプログラミングやウェブ制作の学習にとりくみはじめました。教員経験を通して培ってきたコミュニケーション力や課題解決力をウェブ制作事業によって社会に還元したいという思いが募り、現在副業でウェブ制作・開発にとりくんでいます。
 
-					</p><!-- /.description -->
-					<a class="el_link_white" href="#">もっと読む >>></a>
-				</div><!-- /.bl_description -->
+					<div class="bl_card">
+
+						<bl_card_textWrapper>
+							<h3>私について</h3>
+							<div class="bl_card_description">
+								<p>
+									２０１９年春頃から本格的にプログラミングやウェブ制作の学習にとりくみはじめました。教員経験を通して培ってきたコミュニケーション力や課題解決力をウェブ制作事業によって社会に還元したいという思いが募り、現在副業でウェブ制作・開発にとりくんでいます。
+
+								</p><!-- /.description -->
+								<a class="el_link_white" href="#">もっと読む >>></a>
+							</div><!-- /.bl_card_description -->
+						</bl_card_textWrapper>
+						<figure class="bl_card_image bl_card_image_about">
+							<img src="./images/icon.png" alt="">
+							
+						</figure><!-- /.bl_card_image -->
+					</div>
+
+
+
+
+
+
 			</div><!-- /.ly_intro -->
 
-			<img src="./images/icon.png" alt="">
 		</section><!-- /.about -->
 
 		<section class="ly_cont">
-			<h2 class="el_heading contact__heading">コンタクト</h2>
+			<h2 class="bl_heading contact__heading">コンタクト</h2>
 
 		</section><!-- /.contact -->
 	</main>
