--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="https://use.typekit.net/wpn4iwl.css">
+
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,6 +18,16 @@
 
 	<link rel="stylesheet" href="./styles/vendors/bootstrap-reboot.css">
 	<link rel="stylesheet" href="./styles/style.css">
+	<script>
+		(function(d) {
+			var config = {
+				kitId: 'dug4prd',
+				scriptTimeout: 3000,
+				async: true
+			},
+			h=d.documentElement,t=setTimeout(function(){h.className=h.className.replace(/\bwf-loading\b/g,"")+" wf-inactive";},config.scriptTimeout),tk=d.createElement("script"),f=false,s=d.getElementsByTagName("script")[0],a;h.className+=" wf-loading";tk.src='https://use.typekit.net/'+config.kitId+'.js';tk.async=true;tk.onload=tk.onreadystatechange=function(){a=this.readyState;if(f||a&&a!="complete"&&a!="loaded")return;f=true;clearTimeout(t);try{Typekit.load(config)}catch(e){}};s.parentNode.insertBefore(tk,s)
+		})(document);
+	</script>
 	<title>WEBSON | 大阪のウェブ制作フリーランス</title>
 </head>
 
@@ -295,7 +305,7 @@
 				</div><!-- /.bl_heading -->
 				<div class="bl_description">
 					<p>
-						これまでの制作実績を掲載しています。案件として受けたものでも、後悔ができないものもありますので、気になる方はお問い合わせください。
+						これまでの制作実績を掲載しています。案件として受けたものでも、公開ができないものもありますので、気になる方はお問い合わせください。
 					</p>
 				</div><!-- /.bl_description -->
 
@@ -508,7 +518,7 @@
 						</bl_card_textWrapper>
 						<figure class="bl_card_image bl_card_image_about">
 							<img src="./images/icon.png" alt="">
-							
+
 						</figure><!-- /.bl_card_image -->
 					</div>
 
